--- a/wid_podjetje.ui
+++ b/wid_podjetje.ui
@@ -86,6 +86,12 @@
    </item>
   </layout>
  </widget>
+ <tabstops>
+  <tabstop>btn_nov</tabstop>
+  <tabstop>btn_brisi</tabstop>
+  <tabstop>chk_min</tabstop>
+  <tabstop>tbl_podjetje</tabstop>
+ </tabstops>
  <resources/>
  <connections/>
 </ui>
