--- a/wid_casovnice.ui
+++ b/wid_casovnice.ui
@@ -267,6 +267,9 @@
    </item>
    <item>
     <widget class="QTableWidget" name="tbl_casovnice">
+     <property name="editTriggers">
+      <set>QAbstractItemView::NoEditTriggers</set>
+     </property>
      <property name="alternatingRowColors">
       <bool>true</bool>
      </property>
