--- a/wid_casovnice.ui
+++ b/wid_casovnice.ui
@@ -268,7 +268,7 @@
    <item>
     <widget class="QTableWidget" name="tbl_casovnice">
      <property name="editTriggers">
-      <set>QAbstractItemView::NoEditTriggers</set>
+      <set>QAbstractItemView::AllEditTriggers</set>
      </property>
      <property name="alternatingRowColors">
       <bool>true</bool>
