--- a/wid_casovnice.ui
+++ b/wid_casovnice.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1093</width>
+    <width>1098</width>
     <height>657</height>
    </rect>
   </property>
@@ -267,14 +267,20 @@
    </item>
    <item>
     <widget class="QTableWidget" name="tbl_casovnice">
+     <property name="enabled">
+      <bool>true</bool>
+     </property>
      <property name="editTriggers">
-      <set>QAbstractItemView::AllEditTriggers</set>
+      <set>QAbstractItemView::NoEditTriggers</set>
      </property>
      <property name="alternatingRowColors">
       <bool>true</bool>
      </property>
      <property name="selectionMode">
       <enum>QAbstractItemView::NoSelection</enum>
+     </property>
+     <property name="selectionBehavior">
+      <enum>QAbstractItemView::SelectRows</enum>
      </property>
      <property name="sortingEnabled">
       <bool>true</bool>
