SPREMEMBA OBRAVNAVE AVTOMOBILA V PROGRAMU
Do sedaj je imel uporabnik lahko en sam avtomobil, s katerim si je
obračunaval potne stroške. Zaradi potreb službenih avtomobilov, menjave
domačega avtomobila, je potrebna sprememba take obravnave.
Ideja je, da se avtomobili obravnavajo v svojem šifrantu, kjer ima lahko
svoje statuse. Ti se nato kličejo v obliki šifranta v potne naloge, od
koder gredo v izpis.
Narejeno: tabela avtomobilov, prepis avtomobilov iz tabele uporabnikov,
prikaz možnih avtomobilov pri posamezniku, urejanje avtomobilov.
ToDo: vnos avtomobila v potni nalog, izpis potnega naloga glede na
nov prikaz avtomobila.

--- a/glavnookno.ui
+++ b/glavnookno.ui
@@ -187,6 +187,7 @@ border:0;</string>
     </property>
     <addaction name="actionPodjetje"/>
     <addaction name="actionUporabniki"/>
+    <addaction name="actionAvtomobili"/>
     <addaction name="separator"/>
     <addaction name="action_asovnice"/>
     <addaction name="separator"/>
@@ -317,6 +318,11 @@ border:0;</string>
   <action name="actionNastavitve">
    <property name="text">
     <string>Nastavitve</string>
+   </property>
+  </action>
+  <action name="actionAvtomobili">
+   <property name="text">
+    <string>Avtomobili</string>
    </property>
   </action>
  </widget>
