POTNI NALOGI OHRANIJO PODATKE O UPORABNIKIH TUDI, ČE SE TI SPREMENIJO
Do sedaj so se pri spremembi podatkov o uporabnikih spremenili tudi podatki
na potnih nalogih. S to posodobitvijo do tega ne prihaja več.

Dodane so dodatne tabele pri potnih nalogih, v katere se shranijo podatki
o uporabniku, ki so zahtevane za potni nalog. Omogočeno je tudi
spreminjanje in popravljanje teh podatkov neposredno v formi potnega
naloga.

Ob spremembi podatkov uporabnika ni več potrebno ponovne prijave, ampak se
podatki osvežijo.

#61

--- a/glavnookno.ui
+++ b/glavnookno.ui
@@ -26,8 +26,8 @@
    <enum>Qt::ToolButtonTextOnly</enum>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QGridLayout" name="gridLayout">
-    <item row="0" column="0">
+   <layout class="QVBoxLayout" name="verticalLayout">
+    <item>
      <layout class="QHBoxLayout" name="horizontalLayout">
       <item>
        <widget class="QLabel" name="lbl_pozdrav">
@@ -121,7 +121,7 @@ border:0;</string>
       </item>
      </layout>
     </item>
-    <item row="1" column="0">
+    <item>
      <widget class="QScrollArea" name="scrollArea">
       <property name="widgetResizable">
        <bool>true</bool>
